--- a/data_analysis/data_analysis.Rmd
+++ b/data_analysis/data_analysis.Rmd
@@ -79,7 +79,7 @@ chrome_data <- get_data("chrome")
 Next, let us define a function to plot two histograms of values for non-critical and critical categories, as well as their qq plots.
 
 ```{r}
-plot_hist_qq <- function(data, column, metric_label, unit_label, browser_name) {
+plot_hist_qq <- function(data, column, metric_label, unit_label, browser_name, save=FALSE) {
   # Plot histogram
   hist_plot <- ggplot(data, aes_string(x = column, fill = 'critical', color = 'critical')) + geom_histogram(position = 'identity', alpha = 0.5) + xlab(paste(metric_label, ' (', unit_label, ')', sep='')) + ylab('Frequency') + ggtitle(paste('Histogram of ', metric_label, ' (', browser_name, ')', sep=''))+ scale_color_manual(labels=c('Original', 'Critical'), values=c('red', 'blue')) + scale_fill_manual(labels=c('Original', 'Critical'), values=c('red', 'blue')) + theme_minimal() +
     theme(plot.title = element_text(hjust = 0.5),
@@ -105,7 +105,15 @@ plot_hist_qq <- function(data, column, metric_label, unit_label, browser_name) {
           axis.line = element_line(colour = "black"))
   
   show(hist_plot)
+  if (save == TRUE) {
+    ggsave(paste("hist", "_", str_replace_all(metric_label, "[^[:alnum:]]", ""), "_", browser_name, ".pdf", sep="")) 
+  }
+
   show(qq_plot)
+  if (save == TRUE) {
+   ggsave(paste("qq", "_", str_replace_all(metric_label, "[^[:alnum:]]", ""), "_", browser_name, ".pdf", sep="")) 
+  }
+
 }
 ```
 
@@ -114,9 +122,12 @@ plot_hist_qq <- function(data, column, metric_label, unit_label, browser_name) {
 To get an impression of the distribution of the data, we first plot the histogram and qq plot of the energy consumption.
 
 ```{r}
-plot_hist_qq(chrome_data, 'energy_consumption', "Energy Consumption", "Joules", 'Chrome')
+dir.create(paste(getwd(), "/plots", sep=""))
+plots_dir <- paste(getwd(), "/plots", sep="")
+setwd(plots_dir)
+plot_hist_qq(chrome_data, 'energy_consumption', "Energy Consumption", "Joules", 'Chrome', TRUE)
 
-plot_hist_qq(firefox_data, 'energy_consumption', "Energy Consumption", "Joules", 'Firefox')
+plot_hist_qq(firefox_data, 'energy_consumption', "Energy Consumption", "Joules", 'Firefox', TRUE)
 ```
 In the above plots we observe some outliers, which we will *not* remove, to prevent potential bias. The actual quantiles seem to diverge from the theoretical quantiles, especially for Chrome, so we do not think these measures follow a normal distribution. To confirm, let us compute the skewness and perform a shapiro-wilk test.
 
@@ -196,9 +207,10 @@ For both chrome and firefox the Wilcoxon test yields a p-value > 0.05, meaning t
 To get an impression of the distribution of the data, we first plot the histogram and qq plot of the energy consumption.
 
 ```{r}
-plot_hist_qq(chrome_data, 'time', "Initial Load Time", "Milliseconds", 'Chrome')
+setwd(plots_dir)
+plot_hist_qq(chrome_data, 'time', "Initial Load Time", "Milliseconds", 'Chrome', TRUE)
 
-plot_hist_qq(firefox_data, 'time', "Initial Load Time", "Milliseconds", 'Firefox')
+plot_hist_qq(firefox_data, 'time', "Initial Load Time", "Milliseconds", 'Firefox', TRUE)
 ```
 
 In the above plots we observe some outliers, which we will *not* remove, to prevent potential bias. The actual quantiles seem to diverge from the theoretical quantiles, especially for Chrome, so we do not think these measures follow a normal distribution. To confirm, let us compute the skewness and perform a shapiro-wilk test.
@@ -249,9 +261,10 @@ For both chrome and firefox the Wilcoxon test yields a p-value > 0.05, meaning t
 To get an impression of the distribution of the data, we first plot the histogram and qq plot of the energy consumption.
 
 ```{r}
-plot_hist_qq(chrome_data, 'cpu_usage', "CPU Utilisation", "%", 'Chrome')
+setwd(plots_dir)
+plot_hist_qq(chrome_data, 'cpu_usage', "CPU Utilisation", "%", 'Chrome', TRUE)
 
-plot_hist_qq(firefox_data, 'cpu_usage', "CPU Utilisation", "%", 'Firefox')
+plot_hist_qq(firefox_data, 'cpu_usage', "CPU Utilisation", "%", 'Firefox', TRUE)
 ```
 
 In the above plots we observe some outliers, which we will *not* remove, to prevent potential bias. The actual quantiles seem to diverge from the theoretical quantiles, especially for Chrome, so we do not think these measures follow a normal distribution. To confirm, let us compute the skewness and perform a shapiro-wilk test.
@@ -299,9 +312,10 @@ For both chrome and firefox the Wilcoxon test yields a p-value > 0.05, meaning t
 To get an impression of the distribution of the data, we first plot the histogram and qq plot of the energy consumption.
 
 ```{r}
-plot_hist_qq(chrome_data, 'memory_usage', "Memory Utilisation", "KB", 'Chrome')
+setwd(plots_dir)
+plot_hist_qq(chrome_data, 'memory_usage', "Memory Utilisation", "KB", 'Chrome', TRUE)
 
-plot_hist_qq(firefox_data, 'memory_usage', "Memory Utilisation", "KB", 'Firefox')
+plot_hist_qq(firefox_data, 'memory_usage', "Memory Utilisation", "KB", 'Firefox', TRUE)
 ```
 
 In the above plots we observe some outliers, which we will *not* remove, to prevent potential bias. The actual quantiles seem to diverge from the theoretical quantiles, especially for Chrome, so we do not think these measures follow a normal distribution. To confirm, let us compute the skewness and perform a shapiro-wilk test.
@@ -358,6 +372,7 @@ The obtained Cliff’s delta effect size measure is 0.10694, thus
 indicating a negligible effect size (|d| < 0.147).
 
 ```{r}
+setwd(plots_dir)
 ggplot(chrome_data, group=critical) + theme_minimal() + scale_color_manual(labels=c('Original', 'Critical'), values=c('red', 'blue')) + scale_fill_manual(labels=c('Original', 'Critical'), values=c('red', 'blue')) + theme_minimal() + ggtitle('Density Curve for Memory Utilisation') + xlab('Memory Utilisation (KB)') + ylab('Density') + 
   theme(plot.title = element_text(hjust = 0.5),
         axis.text.y = element_text(size=14),
@@ -368,4 +383,5 @@ ggplot(chrome_data, group=critical) + theme_minimal() + scale_color_manual(label
         legend.title=element_blank(),
         panel.background = element_blank(),
         axis.line = element_line(colour = "black")) + geom_density(aes(x = memory_usage, fill=critical, color=critical), alpha=0.4)
+ggsave("density_memory_utilisation.pdf")
 ```
